--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Sejam Bem Vindos Gamers!!!</h1>
     <p>Estou iniciando um ambiente, onde possa passar conhecimento e aprender com quem quiser publicar e ensinar algo.</p>
+    <p>Estou aprendendo muita coisa nova e dificil estou procurando colocar em pratica tudoo.</p>
     
 </body>
 </html>
