--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YarcanjoY</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
+    <main>
     <h1>Sejam Bem Vindos Gamers!!!</h1>
     <p>Estou iniciando um ambiente, onde possa passar conhecimento e aprender com quem quiser publicar e ensinar algo.</p>
     <p>Estou aprendendo muita coisa nova e dificil estou procurando colocar em pratica tudoo.</p>
+    </main>
+   
    
 </body>
 </html>
