--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <main>
-    <h1>Sejam Bem Vindos Gamers!!!</h1>
-    <p>Estou iniciando um ambiente, onde possa passar conhecimento e aprender com quem quiser publicar e ensinar algo.</p>
+    <h1 >Sejam Bem Vindos Gamers!!!</h1>
+    <p id="principal">Estou iniciando um ambiente, onde possa passar conhecimento e aprender com quem quiser publicar e ensinar algo.</p>
     <p>Estou aprendendo muita coisa nova e dificil estou procurando colocar em pratica tudoo.</p>
     </main>
    
