--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 >GAMERS NA COVID-19</h1>
     </header>
 
-    <nav>
+    <nav class="li">
         <a href="#">HOME  </a>
         <a href="#">MEUS JOGOS  </a>
         <a href="#">ADICIONAR  </a>
