--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
         <h1 >GAMERS NA COVID-19</h1>
     </header>
 
-    <nav class="li">
-        <a href="#">HOME  </a>
-        <a href="#">MEUS JOGOS  </a>
-        <a href="#">ADICIONAR  </a>
-        <a href="#"> FAVORITOS  </a>
-        <a href="#"> CONTATE-NOS  </a>
-    </nav>
+    <div>
+        <nav class="container">
+            <a href="#"  class="li1">HOME  </a>
+            <a href="#"  class="li2">MEUS JOGOS  </a>
+            <a href="#"  class="li3">ADICIONAR  </a>
+            <a href="#" class="li4"> FAVORITOS  </a>
+            <a href="#" class="li5"> CONTATE-NOS  </a>
+        </nav>
+    </div>
 
     <main>
         <article>
