--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <a href="#" class="li5"> CONTATE-NOS  </a>
         </nav>
     </div>
-
+<br><br><br><br>
     <main>
         <article>
-            <h2>75,8% dos gamers brasileiros afirmam jogar mais durante pandemia, diz pesquisa</h2>
+            <h2 class="tituloss">75,8% dos gamers brasileiros afirmam jogar mais durante pandemia, diz pesquisa</h2>
             <p>
                 As informações estão de acordo com a 8ª Pesquisa Game Brasil (PGB), importante levantamento sobre o consumo de jogos eletrônicos.
                 Ainda segundo o estudo, 72% da população do País afirma jogar jogos eletrônicos no geral. E por conta da pandemia, 51,5% dos gamers realizaram mais sessões de partidas online com amigos.“60,9% do público afirma ter consumido mais conteúdo relacionados a jogos, e 42,2% disseram ter investido mais dinheiro em jogos durante o período de isolamento social”, destaca Guilherme Camargo, sócio e CEO do Sioux Group, além de professor na pós-graduação da Escola Superior de Propaganda e Marketing (ESPM).
@@ -37,14 +37,16 @@
                 
             </p>
 
-            <h2 class="segundo"> Smartphone é a plataforma favorita dos brasileiros</h2>
+            <h2 class="tituloss"> Smartphone é a plataforma favorita dos brasileiros</h2>
                 <p>
                     Seguindo a tendência dos anos anteriores, a maioria dos brasileiros (41,6%) ainda prefere jogar nos smartphones. Os consoles ocupam a 2ª colocação, com 25,8% de preferência, seguidos pelo computador (PC), em 3º, com 18,3%.
                     “O smartphone oferece o melhor custo-benefício com diversas funcionalidades e portabilidade, incluindo uma grande quantidade de jogos gratuitos que ganharam grande destaque no ano passado, como ‘Free Fire’ e ‘Among Us’. Fora isso, os gamers casuais possivelmente se identificam mais com as propostas dos jogos mobile, que oferecem partidas rápidas e mais acessíveis”, diz Silva.
 
                 </p>
 
-                <h3>Renda média familiar do gamer é de R$ 2 mil</h3>
+                    <h3 class="tituloss">Renda média familiar do gamer é de R$ 2 mil</h3>
+
+
                 <p>
                     Conforme a PGB 2021, a maioria dos gamers brasileiros possui uma renda média familiar de até R$ 2.090 (30,8%), seguidos por uma parcela de 30,3% que afirma ter até R$ 4.180.
 
